--- a/AI/Mra/外れ除去.ipynb
+++ b/AI/Mra/外れ除去.ipynb
@@ -150,16 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1f5f09b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1c4a2278>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -179,13 +179,6 @@
    "source": [
     "sns.distplot(df['x2'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
