--- a/AI/Mra/実データ演習.ipynb
+++ b/AI/Mra/実データ演習.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4  5.33  36.2  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "506"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "max     37.970000   50.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2f2b17b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a240eaba8>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "y    0.249929 -0.381626 -0.468536 -0.507787  0.333461 -0.737663  1.000000  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,16 +792,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a26b4bf98>"
+       "<seaborn.axisgrid.PairGrid at 0x1a32db9f60>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "2  4.03  34.7  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
        "0.00632"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
        "0.7406426641094094"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
        "0.7209056672661758"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1106,7 @@
        "0.7468316520140627"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "29.42368846940558"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
        "['model.pkl']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,16 +1243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([29.42368847])"
+       "array([29.424])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,39 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-8.95714048e-02,  6.73132853e-02,  5.04649248e-02,  2.18579583e+00,\n",
-       "       -1.72053975e+01,  3.63606995e+00,  2.05579939e-03, -1.36602886e+00,\n",
-       "        2.89576718e-01, -1.22700072e-02, -8.34881849e-01,  9.40360790e-03,\n",
-       "       -5.04008320e-01])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.set_printoptions(precision=3, suppress=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1273,7 @@
        "        -1.366,   0.29 ,  -0.012,  -0.835,   0.009,  -0.504])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1284,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.set_printoptions(precision=3, suppress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -0.09 ,   0.067,   0.05 ,   2.186, -17.205,   3.636,   0.002,\n",
+       "        -1.366,   0.29 ,  -0.012,  -0.835,   0.009,  -0.504])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1422,7 @@
        "2  4.03  34.7  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,6 +1430,13 @@
    "source": [
     "df.head(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
